Radio buttons alignment fix

--- a/client/src/pages/RegisterPage/RegisterPage.module.css
+++ b/client/src/pages/RegisterPage/RegisterPage.module.css
@@ -1,88 +1,92 @@
 /* Center Register page */
 .registerContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  /* Register box */
-  .registerBox {
-    background: white;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 600px;
-    text-align: center;
-  }
-  
-  /* Form inputs */
-  .inputGroup {
-    margin-bottom: 15px;
-    text-align: left;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  .error {
-    color: red;
-    margin-top: 5px;
-  }
-  
-  .inputGroup label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .inputGroup input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  
-  /* Register button */
-  .registerButton {
-    width: 100%;
-    padding: 10px;
-    background-color: var(--primary-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  
-  .registerButton:hover {
-    background-color: var(--primary-color-dark);
-  }
-  
-  /* Register link */
-  .registerLink {
-    color: var(--primary-color);
-    margin-top: 15px;
-  }
-  
-  .registerForm {
-    margin-top: 20px;
-  }
+/* Register box */
+.registerBox {
+  background: white;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 600px;
+  text-align: center;
+}
 
-  .errorContainer {
-    min-height: 20px;
-  }
+/* Form inputs */
+.inputGroup {
+  margin-bottom: 15px;
+  text-align: left;
+}
 
-  .radioGroup {
-    display: flex;
-    /* flex-direction: column;  */
-    gap: 10px; 
+.error {
+  color: red;
+  margin-top: 5px;
+}
+
+.inputGroup label {
+  display: block;
+  font-weight: bold;
+}
+
+.inputGroup input {
+  /* width: 100%; */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+/* Register button */
+.registerButton {
+  width: 100%;
+  padding: 10px;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.registerButton:hover {
+  background-color: var(--primary-color-dark);
+}
+
+/* Register link */
+.registerLink {
+  color: var(--primary-color);
+  margin-top: 15px;
+}
+
+.registerForm {
+  margin-top: 20px;
+}
+
+.errorContainer {
+  min-height: 20px;
+}
+
+.radioGroup {
+  display: flex;
+  flex-direction: column; 
+  gap: 10px;
 }
 
 .radioLabel {
-    display: flex;
-    align-items: center; 
-    font-size: 16px;
-    cursor: pointer;
+  display: flex;
+  align-items: center; 
+  font-size: 16px;
 }
 
+.radioLabel label {
+  width: 7em;
+}
 
+.radioButton {
+  width: 20%;
+}
